...
                            color = Color.White,
                            fontSize = 16.sp,
                            fontWeight = FontWeight.Medium
                        )
                    }

                    // Sección "Categorías" (expandible)
                    Row(
                        modifier = Modifier
                            .fillMaxWidth()
                            .clickable {
                                isCategoriesExpanded = !isCategoriesExpanded
                            }
...
                                    .background(Color.White, CircleShape)
                                    .clip(CircleShape)
                            )
                        } else {
                            Image(
                                painter = painterResource(id = R.drawable.perfil_usuario),
                                contentDescription = "Perfil",
                                contentScale = ContentScale.Fit,
                                modifier = Modifier
                                    .size(40.dp)
                                    .background(Color.White, CircleShape)
                                    .clip(CircleShape)
                            )
...
