...
        ),
        NoteDetailUi(
            id = "2",
            title = "Programacion Kotlin",
            description = "Estados en Compose y buenas practicas",
            createdAtLabel = "3 de abril de 2026",
            category = "Programacion",
            isFavorite = false,
            imageRes = R.drawable.nota2,
            markdownContent = "# Kotlin y Compose: \n\nEstado de UI con remember y mutableStateOf.",
            plainContent = "Kotlin y Compose: \n\nEstado de UI con remember y mutableStateOf.",
            gallery = listOf(R.drawable.nota3),
            hasVideo = false
...
